--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
-driverClass=com.mysql.jdbc.Driver  
-jdbcUrl=jdbc:mysql://localhost:3306/restaurant  
-user=root  
-password=olcp  
+jdbc.driver=com.mysql.jdbc.Driver
+jdbc.url=jdbc:mysql://127.0.0.1:3306/ssm
+jdbc.user=root
+jdbc.password=olcp
 #定义初始连接数  
 initialSize=0  
 #定义最大连接数  
